# simple-pixel-tracker-c

./: CMakeLists.txt  README.md  grab_pixel.c  grab_pixel.h  keylistener.c  keylistener.h  main.c  main.h  threadpool.c  threadpool.h  time_tracker.c  time_tracker.h
